mdapipkg/objects/Achievement__c.object
<CustomObject>
    <fields>
        <fullName>Achievement_Category__c</fullName>
        <label>Achievement Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Award</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Achievement_Type__c</fullName>
        <label>Achievement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Funding_Notes__c</fullName>
        <label>Additional Funding Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Award_Department__c</fullName>
        <inlineHelpText>Name of the Department responsible for the Award or Training</inlineHelpText>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Services</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Forum</fullName>
                </value>
                <value>
                    <fullName>Governance</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Learning &amp; Insights</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Networks</fullName>
                </value>
                <value>
                    <fullName>Chapters and Regions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <label>Hierarchy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Best of the Best</fullName>
                </value>
                <value>
                    <fullName>Committee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Achievement_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                    <color>#FFCC33</color>
                    <label>Gold</label>
                </value>
                <value>
                    <fullName>Silver</fullName>
                    <color>#DDDDDD</color>
                    <label>Silver</label>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                    <color>#996633</color>
                    <label>Bronze</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Type__c</fullName>
        <label>Membership Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YPO</fullName>
                </value>
                <value>
                    <fullName>YPO Gold</fullName>
                </value>
                <value>
                    <fullName>YPO-YPO Gold</fullName>
                </value>
                <value>
                    <fullName>WPO</fullName>
                </value>
                <value>
                    <fullName>YPO-WPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_rebates_used__c</fullName>
        <label>Number of rebates used</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_vouchers_used__c</fullName>
        <label>Number of vouchers used</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Achievements</relationshipLabel>
        <relationshipName>Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open for nomination</fullName>
                </value>
                <value>
                    <fullName>Selected for year</fullName>
                </value>
                <value>
                    <fullName>Awarded for year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Category__c</fullName>
        <label>Training Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Chapter</fullName>
                </value>
                <value>
                    <fullName>CFF training</fullName>
                </value>
                <value>
                    <fullName>CLW</fullName>
                </value>
                <value>
                    <fullName>ebooks</fullName>
                </value>
                <value>
                    <fullName>EPDM</fullName>
                </value>
                <value>
                    <fullName>Forum Fundamentals</fullName>
                </value>
                <value>
                    <fullName>Forum Moderator</fullName>
                </value>
                <value>
                    <fullName>GLC</fullName>
                </value>
                <value>
                    <fullName>GNS</fullName>
                </value>
                <value>
                    <fullName>JumpStart</fullName>
                </value>
                <value>
                    <fullName>On demand</fullName>
                </value>
                <value>
                    <fullName>One on One</fullName>
                </value>
                <value>
                    <fullName>Retreat Training</fullName>
                </value>
                <value>
                    <fullName>Supercharge</fullName>
                </value>
                <value>
                    <fullName>Transformational Forum</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Achievement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Achievement_Category__c</columns>
        <columns>Achievement_Type__c</columns>
        <columns>Name__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Award_All_Active</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Type__c</columns>
        <columns>Achievement_Type__c</columns>
        <columns>Membership_Type__c</columns>
        <columns>Award_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Achievement_Category__c</field>
            <operation>equals</operation>
            <value>Award</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Award - All Active</label>
    </listViews>
    <listViews>
        <fullName>Trainings_Active</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Type__c</columns>
        <columns>Achievement_Type__c</columns>
        <columns>Membership_Type__c</columns>
        <columns>Training_Category__c</columns>
        <columns>Award_Department__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Achievement_Category__c</field>
            <operation>equals</operation>
            <value>Training</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Training - All Active</label>
    </listViews>
    <nameField>
        <displayFormat>ACH-{0000}</displayFormat>
        <label>Achievement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Achievements</pluralLabel>
    <recordTypes>
        <fullName>Award</fullName>
        <active>true</active>
        <label>Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <label>Training</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>